--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,39 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --radius: 1rem;
+  --background: oklch(92% 0.004 286.32);
+  --foreground: oklch(26% 0.007 34.298);
+  --card: oklch(87% 0.006 286.286);
+  --card-foreground: oklch(26% 0.007 34.298);
+  --popover: oklch(87% 0.006 286.286);
+  --popover-foreground: oklch(26% 0.007 34.298);
+  --primary: oklch(72% 0.219 149.579);
+  --primary-foreground: oklch(96% 0.044 156.743);
+  --secondary: oklch(62% 0.265 303.9);
+  --secondary-foreground: oklch(89% 0.057 293.283);
+  --muted: oklch(70% 0.015 286.067);
+  --muted-foreground: oklch(26% 0.007 34.298);
+  --accent: oklch(87% 0.169 91.605);
+  --accent-foreground: oklch(27% 0.077 45.635);
+  --destructive: oklch(71% 0.194 13.428);
+  --destructive-foreground: oklch(27% 0.105 12.094);
+  --border: oklch(70% 0.015 286.067);
+  --input: oklch(87% 0.006 286.286);
+  --ring: oklch(70% 0.165 254.624);
+  --chart-1: oklch(84% 0.238 128.85);
+  --chart-2: oklch(27% 0.072 132.109);
+  --chart-3: oklch(85% 0.199 91.936);
+  --chart-4: oklch(28% 0.066 53.813);
+  --chart-5: oklch(37% 0 0);
+  --sidebar: oklch(92% 0.004 286.32);
+  --sidebar-foreground: oklch(26% 0.007 34.298);
+  --sidebar-primary: oklch(72% 0.219 149.579);
+  --sidebar-primary-foreground: oklch(96% 0.044 156.743);
+  --sidebar-accent: oklch(87% 0.169 91.605);
+  --sidebar-accent-foreground: oklch(27% 0.077 45.635);
+  --sidebar-border: oklch(70% 0.015 286.067);
+  --sidebar-ring: oklch(70% 0.165 254.624);
 }
 
 @theme inline {
@@ -10,12 +41,109 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    /* --radius: 1rem;
+    --background: oklch(14% 0.004 49.25);
+    --foreground: oklch(97% 0.001 106.424);
+    --card: oklch(21% 0.006 56.043);
+    --card-foreground: oklch(97% 0.001 106.424);
+    --popover: oklch(21% 0.006 56.043);
+    --popover-foreground: oklch(97% 0.001 106.424);
+    --primary: oklch(79% 0.209 151.711);
+    --primary-foreground: oklch(26% 0.065 152.934);
+    --secondary: oklch(70% 0.165 254.624);
+    --secondary-foreground: oklch(28% 0.091 267.935);
+    --muted: oklch(26% 0.007 34.298);
+    --muted-foreground: oklch(98% 0.001 106.423);
+    --accent: oklch(74% 0.238 322.16);
+    --accent-foreground: oklch(29% 0.136 325.661);
+    --destructive: oklch(64% 0.246 16.439);
+    --destructive-foreground: oklch(96% 0.015 12.422);
+    --border: oklch(26% 0.007 34.298);
+    --input: oklch(21% 0.006 56.043);
+    --ring: oklch(68% 0.169 237.323);
+    --chart-1: oklch(69% 0.17 162.48);
+    --chart-2: oklch(97% 0.021 166.113);
+    --chart-3: oklch(79% 0.184 86.047);
+    --chart-4: oklch(98% 0.026 102.212);
+    --chart-5: oklch(96% 0.015 12.422);
+    --sidebar: oklch(14% 0.004 49.25);
+    --sidebar-foreground: oklch(97% 0.001 106.424);
+    --sidebar-primary: oklch(79% 0.209 151.711);
+    --sidebar-primary-foreground: oklch(26% 0.065 152.934);
+    --sidebar-accent: oklch(74% 0.238 322.16);
+    --sidebar-accent-foreground: oklch(29% 0.136 325.661);
+    --sidebar-border: oklch(26% 0.007 34.298);
+    --sidebar-ring: hsl(199, 100%, 47%); */
+      --radius: 1rem;
+  --background: oklch(92% 0.004 286.32);
+  --foreground: oklch(26% 0.007 34.298);
+  --card: oklch(87% 0.006 286.286);
+  --card-foreground: oklch(26% 0.007 34.298);
+  --popover: oklch(87% 0.006 286.286);
+  --popover-foreground: oklch(26% 0.007 34.298);
+  --primary: oklch(72% 0.219 149.579);
+  --primary-foreground: oklch(96% 0.044 156.743);
+  --secondary: oklch(62% 0.265 303.9);
+  --secondary-foreground: oklch(89% 0.057 293.283);
+  --muted: oklch(70% 0.015 286.067);
+  --muted-foreground: oklch(26% 0.007 34.298);
+  --accent: oklch(87% 0.169 91.605);
+  --accent-foreground: oklch(27% 0.077 45.635);
+  --destructive: oklch(71% 0.194 13.428);
+  --destructive-foreground: oklch(27% 0.105 12.094);
+  --border: oklch(70% 0.015 286.067);
+  --input: oklch(87% 0.006 286.286);
+  --ring: oklch(70% 0.165 254.624);
+  --chart-1: oklch(84% 0.238 128.85);
+  --chart-2: oklch(27% 0.072 132.109);
+  --chart-3: oklch(85% 0.199 91.936);
+  --chart-4: oklch(28% 0.066 53.813);
+  --chart-5: oklch(37% 0 0);
+  --sidebar: oklch(92% 0.004 286.32);
+  --sidebar-foreground: oklch(26% 0.007 34.298);
+  --sidebar-primary: oklch(72% 0.219 149.579);
+  --sidebar-primary-foreground: oklch(96% 0.044 156.743);
+  --sidebar-accent: oklch(87% 0.169 91.605);
+  --sidebar-accent-foreground: oklch(27% 0.077 45.635);
+  --sidebar-border: oklch(70% 0.015 286.067);
+  --sidebar-ring: oklch(70% 0.165 254.624);
   }
 }
 
