--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,5 +150,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Lexend, Helvetica, sans-serif;
 }
